using wire INT tiles info of nodes for bounding routing resources